--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,9 @@ body{
 #root1{
     margin: 0;
 }
+#history{
+    margin: 0;
+}
 #card{
     width: 60%;
     margin: 20px auto;
@@ -69,4 +72,11 @@ body{
    
     
     margin: 20px 50px;
+}
+#h_text{
+    width: 300px;
+    display: inline-block;
+    border: 2px solid black;
+    border-radius: 4px/4px;
+    padding: 5px;
 }
